<resources>
    <string name="app_name">Ikahimki</string>
    <string name="ikafont">ikafont</string>
    <string name="tolmen">tolm</string>
    <string name="situs">Situs Kami</string>
    <string name="line">OA LINE</string>
    <string name="ig">Instagram</string>
    <string name="profil">prof</string>
    <string name="sejarahika">sejika</string>
    <string name="adart">ada</string>
    <string name="vismis">vis</string>
    <string name="vismisimg">vism</string>
    <string name="lembaga">lem</string>
    <string name="wilayah">wil</string>
    <string name="medsos">med</string>
    <string name="buttonweb">butweb</string>
    <string name="buttonline">butlin</string>
    <string name="buttonig">butig</string>
    <string name="title_activity_wilayah_ika">WilayahIka</string>
    <string name="action_settings">Tentang</string>
    <string name="title_activity_wilayah">Wilayah</string>
    <string name="korwil1">korwil1</string>
    <string name="korwil2">korwil2</string>
    <string name="korwil3">korwil3</string>
    <string name="strukep">Struktur Kepengurusan Ikahimki 2016 &#8211; 2018</string>
    <string name="ver">Version 1.1 &#169;2017 Ikahimki</string>
    <string name="version">ver</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_wilayah2">Wilayah2</string>
    <string name="eventika">Event</string>
    <string name="kor1">korwil1</string>
    <string name="kor2">korwil2</string>
    <string name="kor3">korwil3</string>
    <string name="kor4">korwil4</string>
    <string name="kor5">korwil5</string>
    <string name="kor6">korwil6</string>
    <string name="proinfo">infokomproker</string>
    <string name="prohumas">humasproker</string>
    <string name="prolitbang">litbangproker</string>
    <string name="prowirus">wirusproker</string>
    <string name="propsdm">psdmproker</string>
    <string name="prokimling">kimlingproker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_infokom">Infokom</string>
    <string name="title_activity_humas">Humas</string>
    <string name="title_activity_lit__bang">Lit_Bang</string>
    <string name="title_activity_wirus">Wirus</string>
    <string name="title_activity_main_menu">MainMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_kimling">Kimling</string>
    <string name="title_activity_psdm">Psdm</string>
    <string name="title_activity_ristek">Ristek</string>
    <string name="title_activity_energi">Energi</string>
    <string name="title_activity_sosmapro">Sosmapro</string>
    <string name="search_hint">search</string>
    <string name="search">cari</string>
</resources>
